YTS recomendation system, API is done

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ TMDB_BASE_URL=https://api.themoviedb.org
 TMDB_API_KEY=8265bd1679663a7ea12ac168da84d2e8
 TMDB_API_VERSION=3
 TMDB_IMAGE_BASE_URL=https://image.tmdb.org/t/p
+
+YTS_BASE_URL=https://yts.mx/api
+YTS_DETAILS_URL=/v2/movie_details.json
+YTS_LIST_MOVIES_URL=/v2/list_movies.json
+
