--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+MOVIE_LIST_PATH=/model/movie_list.pkl
+VECTORIZED_TAG_PATH=/model/vectorized_tag.pk
+VECTORIZER_PATH=/model/vectorizer.pk
+
 TMDB_BASE_URL=https://api.themoviedb.org
 TMDB_API_KEY=8265bd1679663a7ea12ac168da84d2e8
 TMDB_API_VERSION=3
