changes in index.py

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MOVIE_LIST_PATH=static/model/movie_list.pkl
+MOVIE_LIST_PATH=static/model/movie_list.pk
 VECTORIZED_TAG_PATH=static/model/vectorized_tag.pk
 VECTORIZER_PATH=static/model/vectorizer.pk
 
